Wired login view to logic. Should work now.

--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,10 @@
 <body>
   <h1>"All good things start with a purpose."</h1>
   <label class="header">Enter User ID</label>
-  <input class="text1"></input>
+  <input id="userId" class="text1"></input>
   <label class="header">What's your password?</label>
-  <input class="text1"></input>
-  <button id="cool">Set me up!</button>
+  <input id="password" class="text1"></input>
+  <button id="Login">Set me up!</button>
 </body>
 
 <script>
