Setup JSHint config file for clean code formatting

--- a/app/setup.html
+++ b/app/setup.html
@@ -13,9 +13,9 @@
 <body>
   <h1>"All good things start with a purpose."</h1>
   <label class="header">Enter User ID</label>
-  <input id="userId" class="text1"></input>
+  <input id="userId" class="text1" />
   <label class="header">What's your password?</label>
-  <input id="password" class="text1"></input>
+  <input id="password" class="text1">
   <button id="Login">Set me up!</button>
 </body>
 
