User settings are now permanently saved

--- a/app/setup.html
+++ b/app/setup.html
@@ -16,7 +16,7 @@
   <input id="userId" class="text1" />
   <label class="header">What's your password?</label>
   <input id="password" class="text1">
-  <button id="Login">Set me up!</button>
+  <button id="Setup">Set me up!</button>
 </body>
 
 <script>
